--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,71 +5,23 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://assets/base_resource_classes/ally_action.gd"
 }, {
-"base": &"AllyAction",
-"class": &"AllyAttackAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_attack_action.gd"
-}, {
 "base": &"Battler",
 "class": &"AllyBattler",
 "icon": "",
 "language": &"GDScript",
 "path": "res://ally_battler/ally_battler.gd"
 }, {
-"base": &"AllyItemAction",
-"class": &"AllyCuringItemAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_curing_item_action.gd"
-}, {
-"base": &"AllyMagicAction",
-"class": &"AllyCurseMagicAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_curse_magic_action.gd"
-}, {
-"base": &"AllyAction",
-"class": &"AllyDefendAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_defend_action.gd"
-}, {
-"base": &"AllyItemAction",
-"class": &"AllyHealingItemAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_healing_item_action.gd"
-}, {
-"base": &"AllyMagicAction",
-"class": &"AllyHealingMagicAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_healing_magic_action.gd"
-}, {
-"base": &"AllyAction",
-"class": &"AllyItemAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_item_action.gd"
-}, {
-"base": &"AllyAction",
-"class": &"AllyMagicAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_magic_action.gd"
-}, {
-"base": &"AllyMagicAction",
-"class": &"AllyOffensiveMagicAction",
-"icon": "",
-"language": &"GDScript",
-"path": "res://assets/base_resource_classes/ally_offensive_magic_action.gd"
-}, {
 "base": &"Resource",
 "class": &"AllyStats",
 "icon": "",
 "language": &"GDScript",
 "path": "res://assets/base_resource_classes/ally_stats.gd"
+}, {
+"base": &"AllyAction",
+"class": &"Attack",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/ally_attack.gd"
 }, {
 "base": &"Resource",
 "class": &"BattleData",
@@ -83,11 +35,17 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://abstract_battler/battler.gd"
 }, {
-"base": &"StatusEffect",
-"class": &"DisablingStatusEffect",
+"base": &"Spell",
+"class": &"CurseSpell",
 "icon": "",
 "language": &"GDScript",
-"path": "res://assets/base_resource_classes/disabling_status_effect.gd"
+"path": "res://assets/base_resource_classes/curse_spell.gd"
+}, {
+"base": &"AllyAction",
+"class": &"Defend",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/ally_defend.gd"
 }, {
 "base": &"Resource",
 "class": &"EnemyAction",
@@ -96,10 +54,10 @@ list=Array[Dictionary]([{
 "path": "res://assets/base_resource_classes/enemy_action.gd"
 }, {
 "base": &"EnemyAction",
-"class": &"EnemyAttackAction",
+"class": &"EnemyAttack",
 "icon": "",
 "language": &"GDScript",
-"path": "res://assets/base_resource_classes/enemy_attack_action.gd"
+"path": "res://assets/base_resource_classes/enemy_attack.gd"
 }, {
 "base": &"Battler",
 "class": &"EnemyBattler",
@@ -108,16 +66,40 @@ list=Array[Dictionary]([{
 "path": "res://enemy_battler/enemy_battler.gd"
 }, {
 "base": &"EnemyAction",
-"class": &"EnemyDefendAction",
+"class": &"EnemyDefend",
 "icon": "",
 "language": &"GDScript",
-"path": "res://assets/base_resource_classes/enemy_defend_action.gd"
+"path": "res://assets/base_resource_classes/enemy_defend.gd"
 }, {
 "base": &"Resource",
 "class": &"EnemyStats",
 "icon": "",
 "language": &"GDScript",
 "path": "res://assets/base_resource_classes/enemy_stats.gd"
+}, {
+"base": &"Spell",
+"class": &"HealingSpell",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/healing_spell.gd"
+}, {
+"base": &"AllyAction",
+"class": &"Item",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/item.gd"
+}, {
+"base": &"Spell",
+"class": &"OffensiveSpell",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/offensive_spell.gd"
+}, {
+"base": &"AllyAction",
+"class": &"Spell",
+"icon": "",
+"language": &"GDScript",
+"path": "res://assets/base_resource_classes/spell.gd"
 }, {
 "base": &"Resource",
 "class": &"StatusEffect",
