--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,26 +17,26 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/SFX/slash.wav")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/enemy_stats/", "res://stats/ally_stats/", "res://assets/sprites/", "res://assets/base_resource_classes/", "res://actions/ally_actions/")
+dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://stats/enemy_stats/", "res://stats/ally_stats/", "res://assets/sprites/", "res://assets/SFX/", "res://actions/ally_actions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://ally_battler/ally_battler.tscn")
-current_scene="res://ally_battler/ally_battler.tscn"
+open_scenes=PackedStringArray("res://ally_battler/ally_battler.tscn", "res://enemy_battler/enemy_battler.tscn", "res://abstract_battler/battler.tscn")
+current_scene="res://abstract_battler/battler.tscn"
 center_split_offset=-344
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://assets/base_resource_classes/ally_action.gd", "res://assets/base_resource_classes/ally_attack.gd", "res://ally_battler/ally_attacking_decider.gd", "res://ally_battler/ally_battler.gd", "res://assets/base_resource_classes/ally_defend.gd", "res://assets/base_resource_classes/ally_stats.gd", "res://autoloads/audio.gd", "res://battle/battle.gd", "res://abstract_battler/battler.gd", "res://assets/base_resource_classes/battle_data.gd", "res://assets/base_resource_classes/curse_spell.gd", "res://battle/debuging_circle.gd", "res://ally_battler/defending_decider.gd", "res://assets/base_resource_classes/enemy_action.gd", "res://assets/base_resource_classes/enemy_attack.gd", "res://enemy_battler/enemy_battler.gd", "res://assets/base_resource_classes/enemy_defend.gd", "res://assets/base_resource_classes/enemy_stats.gd", "res://export_presets.cfg", "res://autoloads/global.gd", "res://assets/base_resource_classes/healing_spell.gd", "res://UI/intro_screen.gd", "res://assets/base_resource_classes/item.gd", "res://ally_battler/item_decider.gd", "res://ally_battler/magic_decider.gd", "res://assets/base_resource_classes/offensive_spell.gd", "res://autoloads/screen_fade.gd", "res://autoloads/signal_bus.gd", "res://assets/base_resource_classes/spell.gd", "res://assets/base_resource_classes/status_effect.gd", "res://UI/title_screen.gd"]
-selected_script=""
-open_help=["AllyBattler"]
+open_scripts=["res://base_resource_classes/ally_action.gd", "res://base_resource_classes/ally_attack.gd", "res://ally_battler/ally_attacking_decider.gd", "res://ally_battler/ally_battler.gd", "res://base_resource_classes/ally_defend.gd", "res://base_resource_classes/ally_stats.gd", "res://autoloads/audio.gd", "res://battle/battle.gd", "res://abstract_battler/battler.gd", "res://base_resource_classes/battle_data.gd", "res://base_resource_classes/curse_spell.gd", "res://battle/debuging_circle.gd", "res://ally_battler/defending_decider.gd", "res://base_resource_classes/enemy_action.gd", "res://base_resource_classes/enemy_attack.gd", "res://enemy_battler/enemy_battler.gd", "res://base_resource_classes/enemy_defend.gd", "res://base_resource_classes/enemy_stats.gd", "res://export_presets.cfg", "res://autoloads/global.gd", "res://base_resource_classes/healing_spell.gd", "res://UI/intro_screen.gd", "res://base_resource_classes/item.gd", "res://ally_battler/item_decider.gd", "res://ally_battler/magic_decider.gd", "res://base_resource_classes/offensive_spell.gd", "res://autoloads/screen_fade.gd", "res://autoloads/signal_bus.gd", "res://base_resource_classes/spell.gd", "res://base_resource_classes/status_effect.gd", "res://UI/title_screen.gd"]
+selected_script="res://base_resource_classes/spell.gd"
+open_help=["@GDScript", "AllyBattler", "AllyStats", "Battler", "EnemyAction", "EnemyBattler", "EnemyStats", "Resource", "StatusEffect", "VBoxContainer"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.07142
@@ -50,8 +50,8 @@ text_shader_zoom_factor=1.0
 
 [editor_log]
 
-log_filter_0=true
-log_filter_2=true
+log_filter_0=false
+log_filter_2=false
 log_filter_1=false
 log_filter_3=false
 log_filter_4=true
