--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,9 +6,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([48]),
 "h_scroll_position": 0,
-"row": 5,
-"scroll_position": 0.0,
-"selection": false,
+"row": 115,
+"scroll_position": 111.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 115,
+"selection_to_column": 26,
+"selection_to_line": 123,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 7,
 "folded_lines": Array[int]([34]),
 "h_scroll_position": 0,
-"row": 73,
-"scroll_position": 64.0,
+"row": 182,
+"scroll_position": 172.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
